# mdl-rfc-0001-ref-impl

./: .gitignore  Cargo.toml  flake.nix
cli/: Cargo.toml
cli/src/: main.rs  test_runner.rs
examples/: alternation.md  collatz.md  conditionals.md  fibonacci.md  fizzbuzz.md  guess.md  hello.md  match.md  strikethrough.md  tables.md
interpreter/: Cargo.toml
interpreter/src/: environment.rs  error.rs  evaluator.rs  evaluator_helpers.rs  executor.rs  lib.rs  pattern.rs  runtime_value.rs
interpreter/tests/: integration.rs
mdl/: Cargo.toml
mdl/src/: lib.rs
test/arguments/: arg-boolean.test.md  arg-expression.test.md  arg-from-test-runner.test.md  arg-invocation-as-arg.test.md  arg-many.test.md  arg-no-args-access.test.md  arg-out-of-bounds.test.md  arg-single.test.md  arg-spread-empty.test.md  arg-spread-multiple.test.md  arg-spread-single.test.md  arg-string.test.md  arg-three.test.md  arg-two.test.md  arg-types-from-runner.test.md  arg-zero-indexed.test.md
test/blocks/: basic-block.test.md  block-body-code-block.test.md  block-body-inline-formatting.test.md  block-body-multiple-elements.test.md  block-body-paragraph.test.md  block-empty.test.md  block-entry-case-insensitive.test.md  block-entry-custom.test.md  block-multiple-top-level.test.md  block-name-case-mismatch-error.test.md  block-name-case-sensitive.test.md  block-name-interior-whitespace-collapse.test.md  block-name-leading-trailing-whitespace.test.md  block-name-multi-word.test.md  block-name-simple.test.md  block-no-chain-returns-document.test.md  block-print-returns-unit.test.md  (+3 more)
(+325 files in other folders)
