[package]
name = "mdl-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mdl"
path = "src/main.rs"

[dependencies]
mdl = { path = "../mdl" }
interpreter = { path = "../interpreter" }
codespan-reporting = "0.13.1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
